predict total pages for progress bar

--- a/src/xElements/progressBar/progressBar.html
+++ b/src/xElements/progressBar/progressBar.html
@@ -3,7 +3,9 @@
 		display: flex;
 		position: relative;
 		background-color: var(--dark-blue);
-		/*outline: 2px solid var(--dark-blue);*/
+		outline: 1px solid #d2d3e8;
+		margin-top: 3px;
+		margin-bottom: 3px;
 	}
 
 	:host(.primary-done) {
@@ -11,7 +13,8 @@
 	}
 
 	:host(.secondary-done) {
-		/*outline-color: var(--white-blue);*/
+		/*outline-color: #5e778e*/
+		display: none;
 	}
 
 	.fill {
