add and remove mangas

--- a/src/xElements/frame/frame.html
+++ b/src/xElements/frame/frame.html
@@ -10,8 +10,8 @@
 </style>
 
 <div>
-	<input id="add-input">
+	<!--todo remove value-->
+	<input id="add-input" placeholder="/chapter/<#######>/" value="https://mangadex.org/chapter/1179911/1">
 	<button id="add-button">+</button>
 </div>
-<x-manga-progress></x-manga-progress>
-<!--<div id="list"></div>-->
+<div id="list"></div>
