--- a/src/xElements/progressBar/progressBar.html
+++ b/src/xElements/progressBar/progressBar.html
@@ -3,18 +3,15 @@
 		display: flex;
 		position: relative;
 		background-color: var(--dark-blue);
-		outline: 1px solid #d2d3e8;
-		margin-top: 3px;
-		margin-bottom: 3px;
+		border: 1px solid #d2d3e8;
 	}
 
 	:host(.primary-done) {
-		/*outline-color: var(--light-blue);*/
+		/*border-color: */
 	}
 
 	:host(.secondary-done) {
-		/*outline-color: #5e778e*/
-		display: none;
+		border-color: #5e778e
 	}
 
 	.fill {
