some errot handling in manga.js

--- a/src/xElements/mangaProgress/mangaProgress.html
+++ b/src/xElements/mangaProgress/mangaProgress.html
@@ -3,6 +3,7 @@
 		display: inline-block;
 		outline: 1px solid #947272; /*todo theme colors*/
 		padding: 3px;
+		cursor: pointer;
 	}
 
 	#top-row {
