--- a/src/xElements/mangaProgress/mangaProgress.html
+++ b/src/xElements/mangaProgress/mangaProgress.html
@@ -29,7 +29,7 @@
 </style>
 
 <div id="top-row">
-	<span id="title"></span> <!--todo max width-->
+	<span id="title"></span>
 	<button id="remove">X</button> <!--todo styling-->
 </div>
 <div><span id="chapters-count"><!--135--></span> chapters</div>
