view entire chapter at once

--- a/src/xElements/mangaView/mangaView.html
+++ b/src/xElements/mangaView/mangaView.html
@@ -4,8 +4,12 @@
 		flex-direction: column;
 	}
 
+	img:empty {
+		min-width: 100px;
+		min-height: 100px;
+		background: red;
+	}
 </style>
 
 <x-button-selector id="chapter-selector"></x-button-selector>
-<x-button-selector id="page-selector"></x-button-selector>
-<img id="page-view">
+<div id="images-container"></div>
