--- a/src/xElements/mangaView/mangaView.html
+++ b/src/xElements/mangaView/mangaView.html
@@ -13,3 +13,6 @@
 
 <x-button-selector id="chapter-selector"></x-button-selector>
 <div id="images-container"></div>
+<div>
+	<button id="next">Next</button>
+</div>
