--- a/src/xElements/mangaView/mangaView.html
+++ b/src/xElements/mangaView/mangaView.html
@@ -4,6 +4,14 @@
 		flex-direction: column;
 	}
 
+	:host(:not(.loaded-chapters)) {
+		display: none;
+	}
+
+	:host(:not(.loaded-pages)) #images-container {
+		display: none;
+	}
+
 	img:empty {
 		min-width: 100px;
 		min-height: 100px;
@@ -12,6 +20,9 @@
 </style>
 
 <x-button-selector id="chapter-selector"></x-button-selector>
+<div>
+	<button id="retry-chapter">Retry chapter</button>
+</div>
 <div id="images-container"></div>
 <div>
 	<button id="next">Next</button>
