--- a/src/xElements/frame/frame.html
+++ b/src/xElements/frame/frame.html
@@ -18,9 +18,7 @@
 </style>
 
 <div id="top-row">
-	<!--todo remove value-->
-	<input id="add-input" placeholder="/chapter/<#######>/" value="https://mangadex.org/chapter/1179911/1">
-	<!--todo on enter key, trigger add-button-->
+	<input id="add-input" placeholder="/chapter/<#######>/" value="">
 	<button id="add-button">+</button>
 </div>
 <div id="list"></div>
