styling and colors, rough draft

--- a/src/xElements/buttonSelector/buttonSelector.html
+++ b/src/xElements/buttonSelector/buttonSelector.html
@@ -1,4 +1,6 @@
 <style>
+	@import 'sharedStyle.css';
+
 	:host {
 		display: flex;
 	}
@@ -13,17 +15,8 @@
 
 	span {
 		display: inline-block;
-		outline: 1px solid white;
 		padding: 5px;
 		margin: 5px;
-	}
-
-	span:hover {
-		background: gray;
-	}
-
-	:checked + span {
-		background: red;
 	}
 </style>
 
