--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,19 @@
 <html>
 	<head>
 		<style>
+			@import './sharedStyle.css';
+
 			:root {
-				--light-blue: #40586f;
-				--dark-blue: #20384f;
-				--light-gray: #888;
-				--dark-gray: #444;
 				--red: #f65;
-				--white-blue: #73b4e6;
+
+				--fill-dark-blue: #20384f;
+				--fill-med-blue: #40586f;
+				--fill-light-blue: #5e778e;
+
+				--outline-gray: #777;
+				--outline-blue: #d2d3e8;
+
+				--selected: red;
 			}
 
 			html {
