--- a/src/index.html
+++ b/src/index.html
@@ -1,24 +1,12 @@
 <html>
 	<head>
 		<style>
+			@import './colors.css';
 			@import './sharedStyle.css';
 
-			:root {
-				--red: #f65;
-
-				--fill-dark-blue: #20384f;
-				--fill-med-blue: #40586f;
-				--fill-light-blue: #5e778e;
-
-				--outline-gray: #777;
-				--outline-blue: #d2d3e8;
-
-				--selected: red;
-			}
-
 			html {
-				background: black;
-				color: white;
+				background: var(--back);
+				color: var(--primary);
 			}
 
 			body {
