--- a/src/xElements/frame/frame.html
+++ b/src/xElements/frame/frame.html
@@ -10,8 +10,12 @@
 		display: flex;
 	}
 
-	#top-row input {
+	#add-input {
 		flex: 1;
+	}
+
+	#add-button {
+		margin-left: 15px
 	}
 
 	#list, #view {
