--- a/src/xElements/mangaProgress/mangaProgress.html
+++ b/src/xElements/mangaProgress/mangaProgress.html
@@ -8,6 +8,7 @@
 	#container {
 		display: inline-block;
 		padding: 3px;
+		margin: 3px;
 	}
 
 	#top-row {
@@ -32,10 +33,10 @@
 	}
 </style>
 
-<div id="container" class="interactable">
+<div id="container" class="interactable interactable-container">
 	<div id="top-row">
 		<span id="title"></span>
-		<button id="remove">X</button> <!--todo styling-->
+		<button id="remove">X</button>
 	</div>
 	<div><span id="chapters-count"><!--135--></span> chapters</div>
 	<div>
