styling: positioning/margins

--- a/src/xElements/buttonSelector/buttonSelector.html
+++ b/src/xElements/buttonSelector/buttonSelector.html
@@ -2,7 +2,13 @@
 	@import 'sharedStyle.css';
 
 	:host {
+		display: contents;
+	}
+
+	#container {
 		display: flex;
+		flex-wrap: wrap;
+		gap: 6px;
 	}
 
 	input {
@@ -16,7 +22,6 @@
 	span {
 		display: inline-block;
 		padding: 3px;
-		margin: 3px;
 	}
 </style>
 
