--- a/src/xElements/frame/frame.html
+++ b/src/xElements/frame/frame.html
@@ -18,6 +18,12 @@
 		margin-left: 15px
 	}
 
+	#list {
+		display: flex;
+		flex-wrap: wrap;
+		gap: 6px;
+	}
+
 	#list, #view {
 		margin-top: 15px;
 	}
