zoom slider styling

--- a/src/xElements/mangaView/mangaView.html
+++ b/src/xElements/mangaView/mangaView.html
@@ -19,6 +19,7 @@
 	}
 
 	#zoom {
+		margin-left: 15px;
 		vertical-align: middle;
 	}
 
@@ -38,6 +39,7 @@
 <div class="row">
 	<button id="retry">Retry</button>
 	<input id="zoom" type="range" min=".5" max="3" value="1" step=".1">
+	<label id="zoom-label"></label>
 </div>
 <div id="images-container" class="row"></div>
 <div class="row">
