short titles in chapter selector & all 3 input exmample placeholder

--- a/src/xElements/frame/frame.html
+++ b/src/xElements/frame/frame.html
@@ -30,7 +30,7 @@
 </style>
 
 <div id="top-row">
-	<input id="add-input" placeholder="/chapter/<#######>/" value="">
+	<input id="add-input" placeholder=".../chapter/<#######>/ or .../manga/<#######>/ or .../title/<#######>/" value="">
 	<button id="add-button">+</button>
 </div>
 <div id="list"></div>
