dev tools shortcut

--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,10 @@
 			}
 		</style>
 
-		<script>require('./xElements/import');</script>
+		<script>
+		  require('./devTools');
+		  require('./xElements/import');
+		</script>
 	</head>
 
 	<body>
